<resources>
    <string name="app_name">20Nov</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_de_item">Nombre del item</string>
    <string name="ingrese_nombre_de_item">Ingrese nombre del item</string>
    <string name="precio_unidad">Precio Unidad</string>
    <string name="ingrese_precio_del_item">Ingrese precio del item</string>
    <string name="cantidad">Cantidad</string>
    <string name="total_actual">Total actual</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
</resources>