<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".CheckRegisterDetailsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_item"
        app:layout_constraintBottom_toBottomOf="@+id/et_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/ingrese_nombre_de_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_item_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_unidad"
        app:layout_constraintBottom_toBottomOf="@+id/et_item_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_item_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="end"
        android:hint="@string/ingrese_precio_del_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/et_item_name" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        app:layout_constraintBottom_toBottomOf="@+id/np_item_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_item_price" />

    <NumberPicker
        android:id="@+id/np_item_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/ingrese_nombre_de_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_item_price"
        app:layout_constraintTop_toBottomOf="@+id/et_item_price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_actual"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/np_item_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_title"
        tools:text="40000" /><!-- tools funciona solo desde el preview de Android Studio-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>